# clicker-plus-plus

./: .gitignore  CMakeLists.txt  README.md  generate_scaffold.sh  solved_problems_report.md
.cursor/rules/: algo-mentor.mdc  game-plan.mdc
header/: std_aliases.hpp
header/arrays/: absent_term_in_arithmetic_series.hpp  add_one_to_number.hpp  apartment_hunting.hpp  best_seat.hpp  calendar_matching.hpp  can_place_flowers.hpp  car_park_escape.hpp  filling_jars.hpp  find_min_operations_to_make_divisible_by3.hpp  first_missing_positive.hpp  fruit_machine.hpp  is_valid_sequence.hpp  largest_range.hpp  longest_peak.hpp  longest_subarray_with_sum.hpp  majority_element.hpp  max_consecutive_ones.hpp  maximum_absolute_difference.hpp  maximum_distance_in_arrays.hpp  merge_overlapping_intervals.hpp  merge_sorted_array.hpp  min_max_sum.hpp  min_steps_in_infinite_grid.hpp  missing_numbers.hpp  monotonic_array.hpp  pick_from_both_sides.hpp  remove_duplicates_from_sorted_array.hpp  remove_one_element_to_make_the_array_strictly_increasing.hpp  repeated_number.hpp  restore_finishing_order.hpp  ride_scheduling_under_capacity.hpp  rotate_array.hpp  vector_intersection.hpp  vegan_value_and_vicinity.hpp  zero_cross.hpp  zero_sum_subarray.hpp
header/backtracking/: all_possible_combinations.hpp
header/binary_search/: count_element_occurence.hpp  cutting_ribbons.hpp  kth_minimum_contiguous_sum.hpp  rotated_array.hpp  wood_cutting.hpp
header/binary_search_tree/: find_closest_value_in_bst.hpp  min_height_bst.hpp
header/binary_tree/: bfs.hpp  binary_tree_node.hpp  binary_tree_paths.hpp  binary_tree_simple.hpp  branch_sums.hpp  dfs.hpp  evaluate_expression.hpp  find_successor.hpp  invert_binary_tree.hpp  node_depths.hpp  path_to_given_node.hpp
header/bit_manipulation/: add_binary.hpp  binary_gap.hpp  binary_representation_of_int.hpp  bitmask_utils.hpp  convert_date_to_binary.hpp  counting_bits.hpp  minimize_xor.hpp  repeated_dna_sequences.hpp  sort_integers_by_number_of1_bits.hpp  subsets_with_bits.hpp  sum_without_plus.hpp  trailing_zeros.hpp
header/combinatorics/: counting_tools.hpp  vowels_of_all_substrings.hpp
header/counting_sort/: h_index.hpp  numbers_smaller_than_current.hpp
header/dynamic_programming/: best_time_to_buy_and_sell.hpp  blackjack_probability.hpp  dice_throws.hpp  levenshtein_distance.hpp  lis.hpp  lis_len.hpp  (+15 more)
scripts/: build.sh  generate_scaffold.sh  test_launcher.sh
src/: main.cpp
(+532 files in other folders)
